--- a/pocket-league/pocket-league.html
+++ b/pocket-league/pocket-league.html
@@ -1,8 +1,8 @@
-<link rel="stylesheet" href="pocket-league/style.css">
-<script src="pocket-league/UnityProgress.js"></script>
-<script src="pocket-league/pocket-league.js"></script>
+<link rel="stylesheet" href="/pocket-league/style.css">
+<script src="/pocket-league/UnityProgress.js"></script>
+<script src="/pocket-league/pocket-league.js"></script>
 <script>
-    var gameInstance = UnityLoader.instantiate("gameContainer", "/uploads/1/2/6/0/126072267/pocket-league.json", {onProgress: UnityProgress,Module:{onRuntimeInitialized: function() {UnityProgress(gameInstance, "complete")}}});
+    var gameInstance = UnityLoader.instantiate("gameContainer", "/pocket-league/pocket-league.json", {onProgress: UnityProgress,Module:{onRuntimeInitialized: function() {UnityProgress(gameInstance, "complete")}}});
 </script>
 <div class="webgl-content">
     <div id="gameContainer" style="width: 100%; height: 100%; margin: auto"></div>
