--- a/pocket-league/pocket-league.html
+++ b/pocket-league/pocket-league.html
@@ -6,4 +6,4 @@
 </script>
 <div class="webgl-content">
     <div id="gameContainer" style="width: 100%; height: 100%; margin: auto"></div>
-    </div
+</div>
