--- a/The Last Stand Union City/index.html
+++ b/The Last Stand Union City/index.html
@@ -1,5 +1,4 @@
-<object width="600" height="400">
-<param name="movie" value="The Last Stand Union City/128954_the_last_stand_union_city.swf">
-<embed src="The Last Stand Union City/128954_the_last_stand_union_city.swf" width="600" height="400">
-</embed>
-</object>
+<script src="https://xxsibxx.github.io/ruffleembedsetup112/ruffle/ruffle.js"></script>
+<div class="swf"dir="ltr" style="text-align: left;" trbidi="on">
+        <embed height="480" pluginspage=" http://www.macromedia.com/go/getflashplayer" src="128954_the_last_stand_union_city.swf" type="application/x-shockwave-flash" width="620"></embed>
+</div>
