--- a/The Last Stand Union City/index.html
+++ b/The Last Stand Union City/index.html
@@ -1,4 +1,4 @@
-<script src="https://xxsibxx.github.io/ruffleembedsetup112/ruffle/ruffle.js"></script>
+<script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 <div class="swf"dir="ltr" style="text-align: left;" trbidi="on">
         <embed height="940" pluginspage=" http://www.macromedia.com/go/getflashplayer" src="the-last-stand-union-city.swf" type="application/x-shockwave-flash" width="1820"></embed>
 </div>
