--- a/data/subway-surfers/index.html
+++ b/data/subway-surfers/index.html
@@ -1,39 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <script src="/js/main.js"></script>
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Subway Surfers | 3kh0</title>
-    <link rel="icon" href="img/FirstAvatar.png">
-
-    <script type="text/javascript" src="4399.z.js"></script>
-    <script>
-      window.config = {
-        loader: "unity",
-        debug: false,
-        maxRatio: 16 / 9,
-        minRatio: 9 / 16,
-
-        title: "Subway Surfers: San Francisco",
-
-        unityVersion: "2019.4.18f1",
-        unityWebglBuildUrl: "Build/SanFrancisco.json",
-
-        fileSize: 35,
-        cachedDecompressedFileSizes: {
-          "SanFrancisco.asm.code.unityweb": 9077143,
-          "SanFrancisco.asm.framework.unityweb": 86369,
-          "SanFrancisco.asm.memory.unityweb": 951447,
-          "SanFrancisco.data.unityweb": 18323917,
-          "SanFrancisco.wasm.code.unityweb": 7279617,
-          "SanFrancisco.wasm.framework.unityweb": 90693,
-        },
-      };
-    </script>
-  </head>
-
-  <body>
-    <script src="master-loader.js"></script>
-  </body>
-</html>
+<script language="javascript">
+document.write(unescape('%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%0A%3C%68%74%6D%6C%3E%0A%20%20%3C%68%65%61%64%3E%0A%20%20%20%20%3C%73%63%72%69%70%74%20%73%72%63%3D%22%2F%6A%73%2F%6D%61%69%6E%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%20%20%20%20%3C%6D%65%74%61%20%63%68%61%72%73%65%74%3D%22%75%74%66%2D%38%22%20%2F%3E%0A%20%20%20%20%3C%6D%65%74%61%20%68%74%74%70%2D%65%71%75%69%76%3D%22%43%6F%6E%74%65%6E%74%2D%54%79%70%65%22%20%63%6F%6E%74%65%6E%74%3D%22%74%65%78%74%2F%68%74%6D%6C%3B%20%63%68%61%72%73%65%74%3D%75%74%66%2D%38%22%20%2F%3E%0A%20%20%20%20%3C%74%69%74%6C%65%3E%53%75%62%77%61%79%20%53%75%72%66%65%72%73%20%7C%20%33%6B%68%30%3C%2F%74%69%74%6C%65%3E%0A%20%20%20%20%3C%6C%69%6E%6B%20%72%65%6C%3D%22%69%63%6F%6E%22%20%68%72%65%66%3D%22%69%6D%67%2F%46%69%72%73%74%41%76%61%74%61%72%2E%70%6E%67%22%3E%0A%0A%20%20%20%20%3C%73%63%72%69%70%74%20%74%79%70%65%3D%22%74%65%78%74%2F%6A%61%76%61%73%63%72%69%70%74%22%20%73%72%63%3D%22%34%33%39%39%2E%7A%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%20%20%20%20%3C%73%63%72%69%70%74%3E%0A%20%20%20%20%20%20%77%69%6E%64%6F%77%2E%63%6F%6E%66%69%67%20%3D%20%7B%0A%20%20%20%20%20%20%20%20%6C%6F%61%64%65%72%3A%20%22%75%6E%69%74%79%22%2C%0A%20%20%20%20%20%20%20%20%64%65%62%75%67%3A%20%66%61%6C%73%65%2C%0A%20%20%20%20%20%20%20%20%6D%61%78%52%61%74%69%6F%3A%20%31%36%20%2F%20%39%2C%0A%20%20%20%20%20%20%20%20%6D%69%6E%52%61%74%69%6F%3A%20%39%20%2F%20%31%36%2C%0A%0A%20%20%20%20%20%20%20%20%74%69%74%6C%65%3A%20%22%53%75%62%77%61%79%20%53%75%72%66%65%72%73%3A%20%53%61%6E%20%46%72%61%6E%63%69%73%63%6F%22%2C%0A%0A%20%20%20%20%20%20%20%20%75%6E%69%74%79%56%65%72%73%69%6F%6E%3A%20%22%32%30%31%39%2E%34%2E%31%38%66%31%22%2C%0A%20%20%20%20%20%20%20%20%75%6E%69%74%79%57%65%62%67%6C%42%75%69%6C%64%55%72%6C%3A%20%22%42%75%69%6C%64%2F%53%61%6E%46%72%61%6E%63%69%73%63%6F%2E%6A%73%6F%6E%22%2C%0A%0A%20%20%20%20%20%20%20%20%66%69%6C%65%53%69%7A%65%3A%20%33%35%2C%0A%20%20%20%20%20%20%20%20%63%61%63%68%65%64%44%65%63%6F%6D%70%72%65%73%73%65%64%46%69%6C%65%53%69%7A%65%73%3A%20%7B%0A%20%20%20%20%20%20%20%20%20%20%22%53%61%6E%46%72%61%6E%63%69%73%63%6F%2E%61%73%6D%2E%63%6F%64%65%2E%75%6E%69%74%79%77%65%62%22%3A%20%39%30%37%37%31%34%33%2C%0A%20%20%20%20%20%20%20%20%20%20%22%53%61%6E%46%72%61%6E%63%69%73%63%6F%2E%61%73%6D%2E%66%72%61%6D%65%77%6F%72%6B%2E%75%6E%69%74%79%77%65%62%22%3A%20%38%36%33%36%39%2C%0A%20%20%20%20%20%20%20%20%20%20%22%53%61%6E%46%72%61%6E%63%69%73%63%6F%2E%61%73%6D%2E%6D%65%6D%6F%72%79%2E%75%6E%69%74%79%77%65%62%22%3A%20%39%35%31%34%34%37%2C%0A%20%20%20%20%20%20%20%20%20%20%22%53%61%6E%46%72%61%6E%63%69%73%63%6F%2E%64%61%74%61%2E%75%6E%69%74%79%77%65%62%22%3A%20%31%38%33%32%33%39%31%37%2C%0A%20%20%20%20%20%20%20%20%20%20%22%53%61%6E%46%72%61%6E%63%69%73%63%6F%2E%77%61%73%6D%2E%63%6F%64%65%2E%75%6E%69%74%79%77%65%62%22%3A%20%37%32%37%39%36%31%37%2C%0A%20%20%20%20%20%20%20%20%20%20%22%53%61%6E%46%72%61%6E%63%69%73%63%6F%2E%77%61%73%6D%2E%66%72%61%6D%65%77%6F%72%6B%2E%75%6E%69%74%79%77%65%62%22%3A%20%39%30%36%39%33%2C%0A%20%20%20%20%20%20%20%20%7D%2C%0A%20%20%20%20%20%20%7D%3B%0A%20%20%20%20%3C%2F%73%63%72%69%70%74%3E%0A%20%20%3C%2F%68%65%61%64%3E%0A%0A%20%20%3C%62%6F%64%79%3E%0A%20%20%20%20%3C%73%63%72%69%70%74%20%73%72%63%3D%22%6D%61%73%74%65%72%2D%6C%6F%61%64%65%72%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%20%20%3C%2F%62%6F%64%79%3E%0A%3C%2F%68%74%6D%6C%3E'));
+</script>
