--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<a name="readme-top"></a>
-
+<p><a name="readme-top"></a></p>
 <!-- PROJECT LOGO -->
-<br />
+<p><br /></p>
 <div align="center">
   <a href="https://github.com/github_username/repo_name">
     <img src="lsw.png" alt="Logo" width="325" height="152">
@@ -25,18 +24,13 @@
 
 
 <!-- CONTACT -->
-## Contact
-
-Your Name - [@twitter_handle](https://twitter.com/twitter_handle) - email@email_client.com
-
-Project Link: [https://github.com/github_username/repo_name](https://github.com/github_username/repo_name)
-
-
-
-
+<h2 id="contact">Contact</h2>
+<p>Your Name - <a href="https://twitter.com/twitter_handle">@twitter_handle</a> - email@email_client.com</p>
+<p>Project Link: <a href="https://github.com/github_username/repo_name">https://github.com/github_username/repo_name</a></p>
 <!-- ACKNOWLEDGMENTS -->
-## Acknowledgments
-
-* [Mr. Handelman](https://www.facebook.com/scotthandelman/)
-* [Google](https://google.com)
-* [ChatbotGPT](https://chat.openai.com/chat)
+<h2 id="acknowledgments">Acknowledgments</h2>
+<ul>
+<li><a href="https://www.facebook.com/scotthandelman/">Mr. Handelman</a></li>
+<li><a href="https://google.com">Google</a></li>
+<li><a href="https://chat.openai.com/chat">ChatbotGPT</a></li>
+</ul>
