--- a/index.html
+++ b/index.html
@@ -1,36 +1,38 @@
-<p><a name="readme-top"></a></p>
-<!-- PROJECT LOGO -->
-<p><br /></p>
-<div align="center">
-  <a href="https://github.com/github_username/repo_name">
-    <img src="lsw.png" alt="Logo" width="325" height="152">
-  </a>
+<body style="background-color:#21262d;">
+  <p><a name="readme-top"></a></p>
+  <!-- PROJECT LOGO -->
+  <p><br /></p>
+  <div align="center">
+    <a href="https://github.com/github_username/repo_name">
+      <img src="lsw.png" alt="Logo" width="325" height="152">
+    </a>
 
-<h3 align="center">Lincoln Southwest Silverhawks</h3>
+  <h3 align="center">Lincoln Southwest Silverhawks</h3>
 
-  <p align="center">
-    Welcome to the (not so) official page of the LSW Silverhawks!
-    <br />
-    <a href="https://google.com"><strong>Have a look around »</strong></a>
-    <br />
-    <br />
-    <a href="https://google.com/">Questions</a>
-    ·
-    <a href="https://google.com/">Report Bug</a>
-    ·
-    <a href="https://google.com/">Request Feature</a>
-  </p>
-</div>
+    <p align="center">
+      Welcome to the (not so) official page of the LSW Silverhawks!
+      <br />
+      <a href="https://google.com"><strong>Have a look around »</strong></a>
+      <br />
+      <br />
+      <a href="https://google.com/">Questions</a>
+      ·
+      <a href="https://google.com/">Report Bug</a>
+      ·
+      <a href="https://google.com/">Request Feature</a>
+    </p>
+  </div>
 
 
-<!-- CONTACT -->
-<h2 id="contact">Contact</h2>
-<p>Your Name - <a href="https://twitter.com/twitter_handle">@twitter_handle</a> - email@email_client.com</p>
-<p>Project Link: <a href="https://github.com/github_username/repo_name">https://github.com/github_username/repo_name</a></p>
-<!-- ACKNOWLEDGMENTS -->
-<h2 id="acknowledgments">Acknowledgments</h2>
-<ul>
-<li><a href="https://www.facebook.com/scotthandelman/">Mr. Handelman</a></li>
-<li><a href="https://google.com">Google</a></li>
-<li><a href="https://chat.openai.com/chat">ChatbotGPT</a></li>
-</ul>
+  <!-- CONTACT -->
+  <h2 id="contact">Contact</h2>
+  <p>Your Name - <a href="https://twitter.com/twitter_handle">@twitter_handle</a> - email@email_client.com</p>
+  <p>Project Link: <a href="https://github.com/github_username/repo_name">https://github.com/github_username/repo_name</a></p>
+  <!-- ACKNOWLEDGMENTS -->
+  <h2 id="acknowledgments">Acknowledgments</h2>
+  <ul>
+  <li><a href="https://www.facebook.com/scotthandelman/">Mr. Handelman</a></li>
+  <li><a href="https://google.com">Google</a></li>
+  <li><a href="https://chat.openai.com/chat">ChatbotGPT</a></li>
+  </ul>
+</body>
