--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
 
   <!-- CONTACT -->
-  <h2 id="contact">Contact</h2>
-  <p>Your Name - <a href="https://twitter.com/twitter_handle">@twitter_handle</a> - email@email_client.com</p>
-  <p>Project Link: <a href="https://github.com/github_username/repo_name">https://github.com/github_username/repo_name</a></p>
+  <h2 id="contact" align="center" style="text-align: center;">Contact</h2>
+  <p style="text-align: center;">Your Name - <a href="https://twitter.com/twitter_handle">@twitter_handle</a> - email@email_client.com</p>
+  <p style="text-align: center;">Project Link: <a href="https://github.com/github_username/repo_name">https://github.com/github_username/repo_name</a></p>
   <!-- ACKNOWLEDGMENTS -->
-  <h2 id="acknowledgments">Acknowledgments</h2>
-  <ul>
+  <h2 id="acknowledgments" align="center" style="text-align: center;">Acknowledgments</h2>
+  <ul style="text-align: center;">
   <li><a href="https://www.facebook.com/scotthandelman/">Mr. Handelman</a></li>
   <li><a href="https://google.com">Google</a></li>
   <li><a href="https://chat.openai.com/chat">ChatbotGPT</a></li>
