--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body style="background-color:#21262d;">
+<body style="background-color:#0076ff; color: white; font-weight: bold;">
   <p><a name="readme-top"></a></p>
   <!-- PROJECT LOGO -->
   <p><br /></p>
@@ -30,7 +30,7 @@
   <p style="text-align: center;">Project Link: <a href="https://github.com/github_username/repo_name">https://github.com/github_username/repo_name</a></p>
   <!-- ACKNOWLEDGMENTS -->
   <h2 id="acknowledgments" align="center" style="text-align: center;">Acknowledgments</h2>
-  <ul style="text-align: center;">
+  <ul style="text-align: center; list-style-type: none;">
   <li><a href="https://www.facebook.com/scotthandelman/">Mr. Handelman</a></li>
   <li><a href="https://google.com">Google</a></li>
   <li><a href="https://chat.openai.com/chat">ChatbotGPT</a></li>
