--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body style="background-color:#0076ff; color: white; font-weight: bold;">
+<body style="background-color:#1e2327; color: white; font-weight: bold;">
   <p><a name="readme-top"></a></p>
   <!-- PROJECT LOGO -->
   <p><br /></p>
