--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
   <h3 align="center">Lincoln Southwest Silverhawks</h3>
 
     <p align="center">
-      Welcome to the (not so) official page of the LSW Silverhawks!
+      ¡Bienvenido a la (no tan) página oficial de los LSW Silverhawks!
       <br />
-      <a href="https://google.com"><strong>Have a look around »</strong></a>
+      <a href="https://google.com"><strong>Echa un vistazo alrededor »</strong></a>
       <br />
       <br />
-      <a href="https://google.com/">Questions</a>
+      <a href="https://google.com/">Preguntas</a>
       ·
-      <a href="https://google.com/">Report Bug</a>
+      <a href="https://google.com/">Reportar error</a>
       ·
-      <a href="https://google.com/">Request Feature</a>
+      <a href="https://google.com/">solicitar característica</a>
     </p>
   </div>
 
 
   <!-- CONTACT -->
-  <h2 id="contact" align="center" style="text-align: center;">Contact</h2>
-  <p style="text-align: center;">Your Name - <a href="https://twitter.com/twitter_handle">@twitter_handle</a> - email@email_client.com</p>
-  <p style="text-align: center;">Project Link: <a href="https://github.com/github_username/repo_name">https://github.com/github_username/repo_name</a></p>
+  <h2 id="contact" align="center" style="text-align: center;">Contacto</h2>
+  <p style="text-align: center;">Su nombre - <a href="https://twitter.com/twitter_handle">@twitter_handle</a> - email@email_client.com</p>
+  <p style="text-align: center;">Enlace del proyecto: <a href="https://github.com/github_username/repo_name">https://github.com/github_username/repo_name</a></p>
   <!-- ACKNOWLEDGMENTS -->
-  <h2 id="acknowledgments" align="center" style="text-align: center;">Acknowledgments</h2>
+  <h2 id="acknowledgments" align="center" style="text-align: center;">Reconocimientos</h2>
   <ul style="text-align: center; list-style-type: none;">
-  <li><a href="https://www.facebook.com/scotthandelman/">Mr. Handelman</a></li>
+  <li><a href="https://www.facebook.com/scotthandelman/">Sr. Handelman</a></li>
   <li><a href="https://google.com">Google</a></li>
   <li><a href="https://chat.openai.com/chat">ChatbotGPT</a></li>
   </ul>
