--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       ·
       <a href="https://google.com/">Reportar error</a>
       ·
-      <a href="https://google.com/">solicitar característica</a>
+      <a href="https://google.com/">Solicitar característica</a>
     </p>
   </div>
 
