--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
   <p style="text-align: center;">Enlace del proyecto: <a href="https://github.com/github_username/repo_name">https://github.com/github_username/repo_name</a></p>
   <!-- ACKNOWLEDGMENTS -->
   <h2 id="acknowledgments" align="center" style="text-align: center;">Reconocimientos</h2>
-  <ul style="text-align: center; list-style-type: none;">
-  <li><a href="https://www.facebook.com/scotthandelman/">Sr. Handelman</a></li>
-  <li><a href="https://google.com">Google</a></li>
-  <li><a href="https://chat.openai.com/chat">ChatbotGPT</a></li>
-  </ul>
+  <div style="width: 800px; margin: 0 auto;">
+    <ul style="text-align: center; list-style-type: none;">
+      <li><a href="https://www.facebook.com/scotthandelman/">Sr. Handelman</a></li>
+      <li><a href="https://google.com">Google</a></li>
+      <li><a href="https://chat.openai.com/chat">ChatbotGPT</a></li>
+    </ul>
+  </div>
 </body>
