--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3029786314630491"
+     crossorigin="anonymous"></script>
 <body style="background-color:#1e2327; color: white; font-weight: bold;">
   <p><a name="readme-top"></a></p>
   <!-- PROJECT LOGO -->
