--- a/data/lan/index.html
+++ b/data/lan/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ee<!DOCTYPE html>
 <script>
   if (window.parent !== window.self) window.parent.postMessage("bonk", "*");
   window.addEventListener("DOMContentLoaded", function () {
