--- a/data/pizz/papapizza.html
+++ b/data/pizz/papapizza.html
@@ -23,7 +23,7 @@
 
 </div>
     
-   <script src="ruffle.js"></script>
+   <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 
 </body>
 </html>
