--- a/data/rs3/run.html
+++ b/data/rs3/run.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <html>
@@ -23,7 +22,7 @@
 </div>
     
 
-   <script src="ruffle.js"></script>
+   <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
 
 </body>
 </html>
