--- a/data/lokal/40xEscape.html
+++ b/data/lokal/40xEscape.html
@@ -13,7 +13,7 @@
 	  <style> body {background-color: #000000 }</style>
   <!-- Div content -->
 <div style="margin:0 auto;text-align:center">
-     <embed src="40xEscape-1.swf" width="700" height="600"> </embed>
+     <embed src="40xescape-139693467.swf" width="700" height="600"> </embed>
       <!-- Div align in the middle -->
       <div style="margin-left:auto;margin-right:auto;text-align:center">
          
