--- a/index.html
+++ b/index.html
@@ -12,4 +12,45 @@ You shouldn't be here.
 
 
 -->
-<script language="javascript">document.write(unescape('%3C%73%63%72%69%70%74%20%61%73%79%6E%63%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%70%61%67%65%61%64%32%2E%67%6F%6F%67%6C%65%73%79%6E%64%69%63%61%74%69%6F%6E%2E%63%6F%6D%2F%70%61%67%65%61%64%2F%6A%73%2F%61%64%73%62%79%67%6F%6F%67%6C%65%2E%6A%73%3F%63%6C%69%65%6E%74%3D%63%61%2D%70%75%62%2D%33%30%32%39%37%38%36%33%31%34%36%33%30%34%39%31%22%0D%0A%20%20%20%20%20%63%72%6F%73%73%6F%72%69%67%69%6E%3D%22%61%6E%6F%6E%79%6D%6F%75%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0D%0A%3C%62%6F%64%79%20%73%74%79%6C%65%3D%22%62%61%63%6B%67%72%6F%75%6E%64%2D%63%6F%6C%6F%72%3A%23%31%65%32%33%32%37%3B%20%63%6F%6C%6F%72%3A%20%77%68%69%74%65%3B%20%66%6F%6E%74%2D%77%65%69%67%68%74%3A%20%62%6F%6C%64%3B%22%3E%0D%0A%20%20%3C%70%3E%3C%61%20%6E%61%6D%65%3D%22%72%65%61%64%6D%65%2D%74%6F%70%22%3E%3C%2F%61%3E%3C%2F%70%3E%0D%0A%20%20%3C%21%2D%2D%20%50%52%4F%4A%45%43%54%20%4C%4F%47%4F%20%2D%2D%3E%0D%0A%20%20%3C%70%3E%3C%62%72%20%2F%3E%3C%2F%70%3E%0D%0A%20%20%3C%64%69%76%20%61%6C%69%67%6E%3D%22%63%65%6E%74%65%72%22%3E%0D%0A%20%20%20%20%3C%61%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%67%69%74%68%75%62%2E%63%6F%6D%2F%67%69%74%68%75%62%5F%75%73%65%72%6E%61%6D%65%2F%72%65%70%6F%5F%6E%61%6D%65%22%3E%0D%0A%20%20%20%20%20%20%3C%69%6D%67%20%73%72%63%3D%22%6C%73%77%2E%70%6E%67%22%20%61%6C%74%3D%22%4C%6F%67%6F%22%20%77%69%64%74%68%3D%22%33%32%35%22%20%68%65%69%67%68%74%3D%22%31%35%32%22%3E%0D%0A%20%20%20%20%3C%2F%61%3E%0D%0A%0D%0A%20%20%3C%68%33%20%61%6C%69%67%6E%3D%22%63%65%6E%74%65%72%22%3E%4C%69%6E%63%6F%6C%6E%20%53%6F%75%74%68%77%65%73%74%20%53%69%6C%76%65%72%68%61%77%6B%73%3C%2F%68%33%3E%0D%0A%0D%0A%20%20%20%20%3C%70%20%61%6C%69%67%6E%3D%22%63%65%6E%74%65%72%22%3E%0D%0A%20%20%20%20%20%20%A1%42%69%65%6E%76%65%6E%69%64%6F%20%61%20%6C%61%20%28%6E%6F%20%74%61%6E%29%20%70%E1%67%69%6E%61%20%6F%66%69%63%69%61%6C%20%64%65%20%6C%6F%73%20%4C%53%57%20%53%69%6C%76%65%72%68%61%77%6B%73%21%0D%0A%20%20%20%20%20%20%3C%62%72%20%2F%3E%0D%0A%20%20%20%20%20%20%3C%61%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%67%6F%6F%67%6C%65%2E%63%6F%6D%22%3E%3C%73%74%72%6F%6E%67%3E%45%63%68%61%20%75%6E%20%76%69%73%74%61%7A%6F%20%61%6C%72%65%64%65%64%6F%72%20%BB%3C%2F%73%74%72%6F%6E%67%3E%3C%2F%61%3E%0D%0A%20%20%20%20%20%20%3C%62%72%20%2F%3E%0D%0A%20%20%20%20%20%20%3C%62%72%20%2F%3E%0D%0A%20%20%20%20%20%20%3C%61%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%67%6F%6F%67%6C%65%2E%63%6F%6D%2F%22%3E%50%72%65%67%75%6E%74%61%73%3C%2F%61%3E%0D%0A%20%20%20%20%20%20%B7%0D%0A%20%20%20%20%20%20%3C%61%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%67%6F%6F%67%6C%65%2E%63%6F%6D%2F%22%3E%52%65%70%6F%72%74%61%72%20%65%72%72%6F%72%3C%2F%61%3E%0D%0A%20%20%20%20%20%20%B7%0D%0A%20%20%20%20%20%20%3C%61%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%67%6F%6F%67%6C%65%2E%63%6F%6D%2F%22%3E%53%6F%6C%69%63%69%74%61%72%20%63%61%72%61%63%74%65%72%ED%73%74%69%63%61%3C%2F%61%3E%0D%0A%20%20%20%20%3C%2F%70%3E%0D%0A%20%20%3C%2F%64%69%76%3E%0D%0A%0D%0A%0D%0A%20%20%3C%21%2D%2D%20%43%4F%4E%54%41%43%54%20%2D%2D%3E%0D%0A%20%20%3C%68%32%20%69%64%3D%22%63%6F%6E%74%61%63%74%22%20%61%6C%69%67%6E%3D%22%63%65%6E%74%65%72%22%20%73%74%79%6C%65%3D%22%74%65%78%74%2D%61%6C%69%67%6E%3A%20%63%65%6E%74%65%72%3B%22%3E%43%6F%6E%74%61%63%74%6F%3C%2F%68%32%3E%0D%0A%20%20%3C%70%20%73%74%79%6C%65%3D%22%74%65%78%74%2D%61%6C%69%67%6E%3A%20%63%65%6E%74%65%72%3B%22%3E%53%75%20%6E%6F%6D%62%72%65%20%2D%20%3C%61%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%74%77%69%74%74%65%72%2E%63%6F%6D%2F%74%77%69%74%74%65%72%5F%68%61%6E%64%6C%65%22%3E%40%74%77%69%74%74%65%72%5F%68%61%6E%64%6C%65%3C%2F%61%3E%20%2D%20%65%6D%61%69%6C%40%65%6D%61%69%6C%5F%63%6C%69%65%6E%74%2E%63%6F%6D%3C%2F%70%3E%0D%0A%20%20%3C%70%20%73%74%79%6C%65%3D%22%74%65%78%74%2D%61%6C%69%67%6E%3A%20%63%65%6E%74%65%72%3B%22%3E%45%6E%6C%61%63%65%20%64%65%6C%20%70%72%6F%79%65%63%74%6F%3A%20%3C%61%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%67%69%74%68%75%62%2E%63%6F%6D%2F%67%69%74%68%75%62%5F%75%73%65%72%6E%61%6D%65%2F%72%65%70%6F%5F%6E%61%6D%65%22%3E%68%74%74%70%73%3A%2F%2F%67%69%74%68%75%62%2E%63%6F%6D%2F%67%69%74%68%75%62%5F%75%73%65%72%6E%61%6D%65%2F%72%65%70%6F%5F%6E%61%6D%65%3C%2F%61%3E%3C%2F%70%3E%0D%0A%20%20%3C%21%2D%2D%20%41%43%4B%4E%4F%57%4C%45%44%47%4D%45%4E%54%53%20%2D%2D%3E%0D%0A%20%20%3C%68%32%20%69%64%3D%22%61%63%6B%6E%6F%77%6C%65%64%67%6D%65%6E%74%73%22%20%61%6C%69%67%6E%3D%22%63%65%6E%74%65%72%22%20%73%74%79%6C%65%3D%22%74%65%78%74%2D%61%6C%69%67%6E%3A%20%63%65%6E%74%65%72%3B%22%3E%52%65%63%6F%6E%6F%63%69%6D%69%65%6E%74%6F%73%3C%2F%68%32%3E%0D%0A%20%20%3C%64%69%76%20%73%74%79%6C%65%3D%22%77%69%64%74%68%3A%20%38%30%30%70%78%3B%20%6D%61%72%67%69%6E%3A%20%30%20%61%75%74%6F%3B%22%3E%0D%0A%20%20%20%20%3C%75%6C%20%73%74%79%6C%65%3D%22%74%65%78%74%2D%61%6C%69%67%6E%3A%20%63%65%6E%74%65%72%3B%20%6C%69%73%74%2D%73%74%79%6C%65%2D%74%79%70%65%3A%20%6E%6F%6E%65%3B%22%3E%0D%0A%20%20%20%20%20%20%3C%6C%69%3E%3C%61%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%77%77%77%2E%66%61%63%65%62%6F%6F%6B%2E%63%6F%6D%2F%73%63%6F%74%74%68%61%6E%64%65%6C%6D%61%6E%2F%22%3E%53%72%2E%20%48%61%6E%64%65%6C%6D%61%6E%3C%2F%61%3E%3C%2F%6C%69%3E%0D%0A%20%20%20%20%20%20%3C%6C%69%3E%3C%61%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%67%6F%6F%67%6C%65%2E%63%6F%6D%22%3E%47%6F%6F%67%6C%65%3C%2F%61%3E%3C%2F%6C%69%3E%0D%0A%20%20%20%20%20%20%3C%6C%69%3E%3C%61%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%63%68%61%74%2E%6F%70%65%6E%61%69%2E%63%6F%6D%2F%63%68%61%74%22%3E%43%68%61%74%62%6F%74%47%50%54%3C%2F%61%3E%3C%2F%6C%69%3E%0D%0A%20%20%20%20%3C%2F%75%6C%3E%0D%0A%20%20%3C%2F%64%69%76%3E%0D%0A%3C%2F%62%6F%64%79%3E'))  </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3029786314630491"
+     crossorigin="anonymous"></script>
+<body style="background-color:#1e2327; color: white; font-weight: bold;">
+  <p><a name="readme-top"></a></p>
+  <!-- PROJECT LOGO -->
+  <p><br /></p>
+  <div align="center">
+    <a href="https://github.com/github_username/repo_name">
+      <img src="lsw.png" alt="Logo" width="325" height="152">
+    </a>
+
+  <h3 align="center">Lincoln Southwest Silverhawks</h3>
+
+    <p align="center">
+      ¡Bienvenido a la (no tan) página oficial de los LSW Silverhawks!
+      <br />
+      <a href="https://google.com"><strong>Echa un vistazo alrededor »</strong></a>
+      <br />
+      <br />
+      <a href="https://google.com/">Preguntas</a>
+      ·
+      <a href="https://google.com/">Reportar error</a>
+      ·
+      <a href="https://google.com/">Solicitar característica</a>
+    </p>
+  </div>
+
+
+  <!-- CONTACT -->
+  <h2 id="contact" align="center" style="text-align: center;">Contacto</h2>
+  <p style="text-align: center;">Su nombre - <a href="https://twitter.com/twitter_handle">@twitter_handle</a> - email@email_client.com</p>
+  <p style="text-align: center;">Enlace del proyecto: <a href="https://github.com/github_username/repo_name">https://github.com/github_username/repo_name</a></p>
+  <!-- ACKNOWLEDGMENTS -->
+  <h2 id="acknowledgments" align="center" style="text-align: center;">Reconocimientos</h2>
+  <div style="width: 800px; margin: 0 auto;">
+    <ul style="text-align: center; list-style-type: none;">
+      <li><a href="https://www.facebook.com/scotthandelman/">Sr. Handelman</a></li>
+      <li><a href="https://google.com">Google</a></li>
+      <li><a href="https://chat.openai.com/chat">ChatbotGPT</a></li>
+    </ul>
+  </div>
+</body>
